Builds. Uses hardwired location for particleType.h. This will have to change.

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,12 +11,6 @@ ifndef OSNAME
 OSNAME = $(OS)-$(ARCH)
 endif
 
-# HALLD_MY is used for installation below but if it is
-# not defined, then we should try installing into HALLD_HOME
-ifndef HALLD_MY
-HALLD_MY = $(HALLD_HOME)
-endif
-
 CPP = c++
 LIBXDR = 
 
@@ -38,9 +32,16 @@ ifeq ($(OStype),SunOS)
 	LIBXDR  := -lnsl
 endif
 
-OBJDIR = .obj/$(BMS_OSNAME)
-BINDIR = .bin/$(BMS_OSNAME)
+OBJDIR = .obj
+BINDIR = .bin
 BINARIES = $(BINDIR)/xml-hddm $(BINDIR)/hddm-xml $(BINDIR)/hddm-c $(BINDIR)/hddm-cpp $(BINDIR)/hddmcat
+
+CXXFLAGS += -I /usr/include/tirpc
+
+INSTALL_PREFIX = ..
+
+HDDM_INCLUDE_FLAGS = -I/home/marki/cleave/particleType \
+    -I$(XSTREAM_HOME)/include -I$(XERCESCROOT)/include -I /usr/include/tirpc
 
 all:	mkdirs $(BINARIES)
 
@@ -48,43 +49,41 @@ mkdirs:
 	mkdir -p $(OBJDIR) $(BINDIR)
 
 install: xml-xml hddm-schema schema-hddm mkdirs $(BINARIES)
-	mkdir -p $(HALLD_MY)/$(BMS_OSNAME)/bin
-	cp -v hddm-schema schema-hddm xml-xml $(HALLD_MY)/$(BMS_OSNAME)/bin
-	mkdir -p $(HALLD_MY)/$(BMS_OSNAME)/bin
-	cp -v $(BINARIES) $(HALLD_MY)/$(BMS_OSNAME)/bin
+	mkdir -p $(INSTALL_PREFIX)/bin
+	cp -v hddm-schema schema-hddm xml-xml $(INSTALL_PREFIX)/bin
+	cp -v $(BINARIES) $(INSTALL_PREFIX)/bin
 
 $(BINDIR)/xml-hddm: xml-hddm.cpp $(OBJDIR)/XString.o $(OBJDIR)/XParsers.o $(OBJDIR)/md5.o
-	$(CPP) $(LD_FLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -o $@ $^ \
-	-L$(HALLD_MY)/$(BMS_OSNAME)/lib \
-	-L$(HALLD_HOME)/$(BMS_OSNAME)/lib -lxstream \
+	$(CPP) $(LD_FLAGS) \
+	$(HDDM_INCLUDE_FLAGS) \
+	-o $@ $^ \
+	-L$(XSTREAM_HOME)/lib -lxstream \
 	-L$(XERCESCROOT)/lib -lxerces-c $(LIBXDR)
 
 $(BINDIR)/hddm-xml: hddm-xml.cpp $(OBJDIR)/XString.o $(OBJDIR)/XParsers.o $(OBJDIR)/md5.o
-	$(CPP) $(LD_FLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -o $@ $^ \
-	-L$(HALLD_MY)/$(BMS_OSNAME)/lib \
-	-L$(HALLD_HOME)/$(BMS_OSNAME)/lib -lxstream -lbz2 -lz \
+	$(CPP) $(LD_FLAGS) $(HDDM_INCLUDE_FLAGS) \
+	-o $@ $^ \
+	-L$(XSTREAM_HOME)/lib -lxstream -lbz2 -lz \
 	-L$(XERCESCROOT)/lib -lxerces-c $(LIBXDR)
 
 $(BINDIR)/hddm-c: hddm-c.cpp $(OBJDIR)/XString.o $(OBJDIR)/XParsers.o $(OBJDIR)/md5.o
-	$(CPP) $(LD_FLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -o $@ $^ \
+	$(CPP) $(LD_FLAGS) -I$(XERCESCROOT)/include \
+	-o $@ $^ \
 	-L$(XERCESCROOT)/lib -lxerces-c $(LIBXDR)
 
 $(BINDIR)/hddm-cpp: hddm-cpp.cpp $(OBJDIR)/XString.o $(OBJDIR)/XParsers.o $(OBJDIR)/md5.o
-	$(CPP) $(LD_FLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -o $@ $^ \
+	$(CPP) $(LD_FLAGS) $(HDDM_INCLUDE_FLAGS) \
+	-o $@ $^ \
 	-L$(XERCESCROOT)/lib -lxerces-c $(LIBXDR)
 
 $(BINDIR)/hddmcat: hddmcat.cpp
-	$(CPP) $(LD_FLAGS) -o $@ $^
+	$(CPP) $(HDDM_INCLUDE_FLAGS) $(LD_FLAGS) -o $@ $^
 
 test: $(BINDIR)/hddm-c $(BINDIR)/hddm-cpp $(BINDIR)/hddm-xml test.xml
 	hddm-c test.xml
 	hddm-cpp test.xml
-	$(CPP) $(LD_FLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -o testhddm -L$(HALLD_HOME)/lib/$(BMS_OSNAME) \
+	$(CPP) $(LD_FLAGS) -I$(XERCESCROOT)/include \
+	-o testhddm \
 	testhddm.cpp hddm_v.c hddm_v.cpp -lxstream $(LIBXDR) -lz -lbz2
 	./testhddm
 	hddm-xml test.hddm
@@ -93,12 +92,12 @@ test: $(BINDIR)/hddm-c $(BINDIR)/hddm-cpp $(BINDIR)/hddm-xml test.xml
 	./hddm-schema $< >$@
 
 $(OBJDIR)/%.o: %.cpp
-	$(CPP) $(CXXFLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -c -o $@ $^ 
+	$(CPP) $(CXXFLAGS) -I$(XERCESCROOT)/include \
+	-c -o $@ $^ 
 
 $(OBJDIR)/%.o: %.c
-	$(CPP) $(CXXFLAGS) -I$(HALLD_MY)/include -I$(HALLD_HOME)/src/include -I$(XERCESCROOT)/include \
-	-I$(HALLD_HOME)/$(BMS_OSNAME)/include -c -o $@ $^ 
+	$(CPP) $(CXXFLAGS) -I$(XERCESCROOT)/include \
+	-c -o $@ $^ 
 
 clean:
 	/bin/rm -f $(OBJDIR)/*.o core *.depend
